timeseries/pype/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list component
Rule 3     statement_list -> statement_list import_statement
Rule 4     statement_list -> import_statement
Rule 5     statement_list -> component
Rule 6     import_statement -> LPAREN IMPORT ID RPAREN
Rule 7     component -> LBRACE ID expression_list RBRACE
Rule 8     expression_list -> expression_list expression
Rule 9     expression_list -> expression
Rule 10    expression -> LPAREN INPUT declaration_list RPAREN
Rule 11    expression -> LPAREN INPUT RPAREN
Rule 12    expression -> LPAREN OUTPUT declaration_list RPAREN
Rule 13    expression -> LPAREN OUTPUT RPAREN
Rule 14    declaration_list -> declaration_list declaration
Rule 15    declaration_list -> declaration
Rule 16    declaration -> LPAREN type ID RPAREN
Rule 17    declaration -> ID
Rule 18    type -> ID
Rule 19    expression -> LPAREN ASSIGN ID expression RPAREN
Rule 20    expression -> LPAREN ID parameter_list RPAREN
Rule 21    expression -> LPAREN ID RPAREN
Rule 22    expression -> LPAREN OP_ADD parameter_list RPAREN
Rule 23    expression -> LPAREN OP_SUB parameter_list RPAREN
Rule 24    expression -> LPAREN OP_MUL parameter_list RPAREN
Rule 25    expression -> LPAREN OP_DIV parameter_list RPAREN
Rule 26    expression -> ID
Rule 27    expression -> NUMBER
Rule 28    expression -> STRING
Rule 29    parameter_list -> parameter_list expression
Rule 30    parameter_list -> expression

Terminals, with rules where they appear

ASSIGN               : 19
ID                   : 6 7 16 17 18 19 20 21 26
IMPORT               : 6
INPUT                : 10 11
LBRACE               : 7
LPAREN               : 6 10 11 12 13 16 19 20 21 22 23 24 25
NUMBER               : 27
OP_ADD               : 22
OP_DIV               : 25
OP_MUL               : 24
OP_SUB               : 23
OUTPUT               : 12 13
RBRACE               : 7
RPAREN               : 6 10 11 12 13 16 19 20 21 22 23 24 25
STRING               : 28
error                : 

Nonterminals, with rules where they appear

component            : 2 5
declaration          : 14 15
declaration_list     : 10 12 14
expression           : 8 9 19 29 30
expression_list      : 7 8
import_statement     : 3 4
parameter_list       : 20 22 23 24 25 29
program              : 0
statement_list       : 1 2 3
type                 : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list component
    (3) statement_list -> . statement_list import_statement
    (4) statement_list -> . import_statement
    (5) statement_list -> . component
    (6) import_statement -> . LPAREN IMPORT ID RPAREN
    (7) component -> . LBRACE ID expression_list RBRACE

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    LPAREN          shift and go to state 6
    LBRACE          shift and go to state 2

    program                        shift and go to state 3
    import_statement               shift and go to state 4
    component                      shift and go to state 5
    statement_list                 shift and go to state 1

state 1

    (1) program -> statement_list .
    (2) statement_list -> statement_list . component
    (3) statement_list -> statement_list . import_statement
    (7) component -> . LBRACE ID expression_list RBRACE
    (6) import_statement -> . LPAREN IMPORT ID RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    LBRACE          shift and go to state 2
    LPAREN          shift and go to state 6

    import_statement               shift and go to state 7
    component                      shift and go to state 8

state 2

    (7) component -> LBRACE . ID expression_list RBRACE
=======
    LPAREN          shift and go to state 3
    LBRACE          shift and go to state 4

    import_statement               shift and go to state 1
    program                        shift and go to state 2
    statement_list                 shift and go to state 5
    component                      shift and go to state 6

state 1

    (4) statement_list -> import_statement .
>>>>>>> Pype Lab 2 work

    ID              shift and go to state 9


state 2

    (0) S' -> program .



state 3

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    (4) statement_list -> import_statement .

    LBRACE          reduce using rule 4 (statement_list -> import_statement .)
    LPAREN          reduce using rule 4 (statement_list -> import_statement .)
    $end            reduce using rule 4 (statement_list -> import_statement .)
=======
    (6) import_statement -> LPAREN . IMPORT ID RPAREN

    IMPORT          shift and go to state 7
>>>>>>> Pype Lab 2 work


state 4

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    (5) statement_list -> component .

    LBRACE          reduce using rule 5 (statement_list -> component .)
    LPAREN          reduce using rule 5 (statement_list -> component .)
    $end            reduce using rule 5 (statement_list -> component .)
=======
    (7) component -> LBRACE . ID expression_list RBRACE

    ID              shift and go to state 8
>>>>>>> Pype Lab 2 work


state 5

    (6) import_statement -> LPAREN . IMPORT ID RPAREN

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    IMPORT          shift and go to state 10
=======
    $end            reduce using rule 1 (program -> statement_list .)
    LBRACE          shift and go to state 4
    LPAREN          shift and go to state 3

    import_statement               shift and go to state 9
    component                      shift and go to state 10

state 6

    (5) statement_list -> component .

    LBRACE          reduce using rule 5 (statement_list -> component .)
    LPAREN          reduce using rule 5 (statement_list -> component .)
    $end            reduce using rule 5 (statement_list -> component .)
>>>>>>> Pype Lab 2 work


state 7

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    (3) statement_list -> statement_list import_statement .

    LBRACE          reduce using rule 3 (statement_list -> statement_list import_statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement_list import_statement .)
    $end            reduce using rule 3 (statement_list -> statement_list import_statement .)
=======
    (6) import_statement -> LPAREN IMPORT . ID RPAREN

    ID              shift and go to state 11
>>>>>>> Pype Lab 2 work


state 8

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    (2) statement_list -> statement_list component .

    LBRACE          reduce using rule 2 (statement_list -> statement_list component .)
    LPAREN          reduce using rule 2 (statement_list -> statement_list component .)
    $end            reduce using rule 2 (statement_list -> statement_list component .)


state 9

=======
>>>>>>> Pype Lab 2 work
    (7) component -> LBRACE ID . expression_list RBRACE
    (8) expression_list -> . expression_list expression
    (9) expression_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    LPAREN          shift and go to state 16
    ID              shift and go to state 11
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15

    expression_list                shift and go to state 14
    expression                     shift and go to state 12

state 10
=======
    LPAREN          shift and go to state 13
    ID              shift and go to state 16
    NUMBER          shift and go to state 17
    STRING          shift and go to state 12

    expression_list                shift and go to state 14
    expression                     shift and go to state 15

state 9
>>>>>>> Pype Lab 2 work

    (3) statement_list -> statement_list import_statement .

    LBRACE          reduce using rule 3 (statement_list -> statement_list import_statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement_list import_statement .)
    $end            reduce using rule 3 (statement_list -> statement_list import_statement .)


<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
state 11

    (26) expression -> ID .

    RPAREN          reduce using rule 26 (expression -> ID .)
    LPAREN          reduce using rule 26 (expression -> ID .)
    ID              reduce using rule 26 (expression -> ID .)
    NUMBER          reduce using rule 26 (expression -> ID .)
    STRING          reduce using rule 26 (expression -> ID .)
    RBRACE          reduce using rule 26 (expression -> ID .)


state 12
=======
state 10

    (2) statement_list -> statement_list component .

    LBRACE          reduce using rule 2 (statement_list -> statement_list component .)
    LPAREN          reduce using rule 2 (statement_list -> statement_list component .)
    $end            reduce using rule 2 (statement_list -> statement_list component .)


state 11
>>>>>>> Pype Lab 2 work

    (6) import_statement -> LPAREN IMPORT ID . RPAREN

    RPAREN          shift and go to state 18


state 13

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    (27) expression -> NUMBER .

    RPAREN          reduce using rule 27 (expression -> NUMBER .)
    LPAREN          reduce using rule 27 (expression -> NUMBER .)
    ID              reduce using rule 27 (expression -> NUMBER .)
    NUMBER          reduce using rule 27 (expression -> NUMBER .)
    STRING          reduce using rule 27 (expression -> NUMBER .)
    RBRACE          reduce using rule 27 (expression -> NUMBER .)


state 14

    (7) component -> LBRACE ID expression_list . RBRACE
    (8) expression_list -> expression_list . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    RBRACE          shift and go to state 19
    LPAREN          shift and go to state 16
    ID              shift and go to state 11
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15

    expression                     shift and go to state 18

state 15

=======
>>>>>>> Pype Lab 2 work
    (28) expression -> STRING .

    RPAREN          reduce using rule 28 (expression -> STRING .)
    LPAREN          reduce using rule 28 (expression -> STRING .)
    ID              reduce using rule 28 (expression -> STRING .)
    NUMBER          reduce using rule 28 (expression -> STRING .)
    STRING          reduce using rule 28 (expression -> STRING .)
    RBRACE          reduce using rule 28 (expression -> STRING .)


<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
state 16
=======
state 13
>>>>>>> Pype Lab 2 work

    (10) expression -> LPAREN . INPUT declaration_list RPAREN
    (11) expression -> LPAREN . INPUT RPAREN
    (12) expression -> LPAREN . OUTPUT declaration_list RPAREN
    (13) expression -> LPAREN . OUTPUT RPAREN
    (19) expression -> LPAREN . ASSIGN ID expression RPAREN
    (20) expression -> LPAREN . ID parameter_list RPAREN
    (21) expression -> LPAREN . ID RPAREN
    (22) expression -> LPAREN . OP_ADD parameter_list RPAREN
    (23) expression -> LPAREN . OP_SUB parameter_list RPAREN
    (24) expression -> LPAREN . OP_MUL parameter_list RPAREN
    (25) expression -> LPAREN . OP_DIV parameter_list RPAREN

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    INPUT           shift and go to state 20
    OUTPUT          shift and go to state 27
    ASSIGN          shift and go to state 25
    ID              shift and go to state 22
    OP_ADD          shift and go to state 26
    OP_SUB          shift and go to state 23
    OP_MUL          shift and go to state 24
    OP_DIV          shift and go to state 21

=======
    INPUT           shift and go to state 25
    OUTPUT          shift and go to state 24
    ASSIGN          shift and go to state 22
    ID              shift and go to state 26
    OP_ADD          shift and go to state 20
    OP_SUB          shift and go to state 21
    OP_MUL          shift and go to state 23
    OP_DIV          shift and go to state 19


state 14

    (7) component -> LBRACE ID expression_list . RBRACE
    (8) expression_list -> expression_list . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    RBRACE          shift and go to state 27
    LPAREN          shift and go to state 13
    ID              shift and go to state 16
    NUMBER          shift and go to state 17
    STRING          shift and go to state 12

    expression                     shift and go to state 28
>>>>>>> Pype Lab 2 work

state 15

    (9) expression_list -> expression .

    RBRACE          reduce using rule 9 (expression_list -> expression .)
    LPAREN          reduce using rule 9 (expression_list -> expression .)
    ID              reduce using rule 9 (expression_list -> expression .)
    NUMBER          reduce using rule 9 (expression_list -> expression .)
    STRING          reduce using rule 9 (expression_list -> expression .)


state 16

    (26) expression -> ID .

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    (8) expression_list -> expression_list expression .

    RBRACE          reduce using rule 8 (expression_list -> expression_list expression .)
    LPAREN          reduce using rule 8 (expression_list -> expression_list expression .)
    ID              reduce using rule 8 (expression_list -> expression_list expression .)
    NUMBER          reduce using rule 8 (expression_list -> expression_list expression .)
    STRING          reduce using rule 8 (expression_list -> expression_list expression .)

=======
    RPAREN          reduce using rule 26 (expression -> ID .)
    LPAREN          reduce using rule 26 (expression -> ID .)
    ID              reduce using rule 26 (expression -> ID .)
    NUMBER          reduce using rule 26 (expression -> ID .)
    STRING          reduce using rule 26 (expression -> ID .)
    RBRACE          reduce using rule 26 (expression -> ID .)


state 17
>>>>>>> Pype Lab 2 work

    (27) expression -> NUMBER .

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    (7) component -> LBRACE ID expression_list RBRACE .

    LBRACE          reduce using rule 7 (component -> LBRACE ID expression_list RBRACE .)
    LPAREN          reduce using rule 7 (component -> LBRACE ID expression_list RBRACE .)
    $end            reduce using rule 7 (component -> LBRACE ID expression_list RBRACE .)


state 20

    (10) expression -> LPAREN INPUT . declaration_list RPAREN
    (11) expression -> LPAREN INPUT . RPAREN
    (14) declaration_list -> . declaration_list declaration
    (15) declaration_list -> . declaration
    (16) declaration -> . LPAREN type ID RPAREN
    (17) declaration -> . ID

    RPAREN          shift and go to state 32
    LPAREN          shift and go to state 33
    ID              shift and go to state 31

    declaration                    shift and go to state 29
    declaration_list               shift and go to state 30

state 21

=======
    RPAREN          reduce using rule 27 (expression -> NUMBER .)
    LPAREN          reduce using rule 27 (expression -> NUMBER .)
    ID              reduce using rule 27 (expression -> NUMBER .)
    NUMBER          reduce using rule 27 (expression -> NUMBER .)
    STRING          reduce using rule 27 (expression -> NUMBER .)
    RBRACE          reduce using rule 27 (expression -> NUMBER .)


state 18

    (6) import_statement -> LPAREN IMPORT ID RPAREN .

    LBRACE          reduce using rule 6 (import_statement -> LPAREN IMPORT ID RPAREN .)
    LPAREN          reduce using rule 6 (import_statement -> LPAREN IMPORT ID RPAREN .)
    $end            reduce using rule 6 (import_statement -> LPAREN IMPORT ID RPAREN .)


state 19

>>>>>>> Pype Lab 2 work
    (25) expression -> LPAREN OP_DIV . parameter_list RPAREN
    (29) parameter_list -> . parameter_list expression
    (30) parameter_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    LPAREN          shift and go to state 16
    ID              shift and go to state 11
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15

    parameter_list                 shift and go to state 35
    expression                     shift and go to state 34

state 22
=======
    LPAREN          shift and go to state 13
    ID              shift and go to state 16
    NUMBER          shift and go to state 17
    STRING          shift and go to state 12

    expression                     shift and go to state 30
    parameter_list                 shift and go to state 29

state 20
>>>>>>> Pype Lab 2 work

    (22) expression -> LPAREN OP_ADD . parameter_list RPAREN
    (29) parameter_list -> . parameter_list expression
    (30) parameter_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    RPAREN          shift and go to state 37
    LPAREN          shift and go to state 16
    ID              shift and go to state 11
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15

    parameter_list                 shift and go to state 36
    expression                     shift and go to state 34

state 23
=======
    LPAREN          shift and go to state 13
    ID              shift and go to state 16
    NUMBER          shift and go to state 17
    STRING          shift and go to state 12

    expression                     shift and go to state 30
    parameter_list                 shift and go to state 31

state 21
>>>>>>> Pype Lab 2 work

    (23) expression -> LPAREN OP_SUB . parameter_list RPAREN
    (29) parameter_list -> . parameter_list expression
    (30) parameter_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    LPAREN          shift and go to state 16
    ID              shift and go to state 11
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15
=======
    LPAREN          shift and go to state 13
    ID              shift and go to state 16
    NUMBER          shift and go to state 17
    STRING          shift and go to state 12

    expression                     shift and go to state 30
    parameter_list                 shift and go to state 32

state 22

    (19) expression -> LPAREN ASSIGN . ID expression RPAREN

    ID              shift and go to state 33
>>>>>>> Pype Lab 2 work

    parameter_list                 shift and go to state 38
    expression                     shift and go to state 34

state 23

    (24) expression -> LPAREN OP_MUL . parameter_list RPAREN
    (29) parameter_list -> . parameter_list expression
    (30) parameter_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    LPAREN          shift and go to state 16
    ID              shift and go to state 11
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15

    parameter_list                 shift and go to state 39
    expression                     shift and go to state 34

state 25

    (19) expression -> LPAREN ASSIGN . ID expression RPAREN

    ID              shift and go to state 40


state 26

    (22) expression -> LPAREN OP_ADD . parameter_list RPAREN
=======
    LPAREN          shift and go to state 13
    ID              shift and go to state 16
    NUMBER          shift and go to state 17
    STRING          shift and go to state 12

    expression                     shift and go to state 30
    parameter_list                 shift and go to state 34

state 24

    (12) expression -> LPAREN OUTPUT . declaration_list RPAREN
    (13) expression -> LPAREN OUTPUT . RPAREN
    (14) declaration_list -> . declaration_list declaration
    (15) declaration_list -> . declaration
    (16) declaration -> . LPAREN type ID RPAREN
    (17) declaration -> . ID

    RPAREN          shift and go to state 37
    LPAREN          shift and go to state 35
    ID              shift and go to state 39

    declaration_list               shift and go to state 36
    declaration                    shift and go to state 38

state 25

    (10) expression -> LPAREN INPUT . declaration_list RPAREN
    (11) expression -> LPAREN INPUT . RPAREN
    (14) declaration_list -> . declaration_list declaration
    (15) declaration_list -> . declaration
    (16) declaration -> . LPAREN type ID RPAREN
    (17) declaration -> . ID

    RPAREN          shift and go to state 41
    LPAREN          shift and go to state 35
    ID              shift and go to state 39

    declaration_list               shift and go to state 40
    declaration                    shift and go to state 38

state 26

    (20) expression -> LPAREN ID . parameter_list RPAREN
    (21) expression -> LPAREN ID . RPAREN
>>>>>>> Pype Lab 2 work
    (29) parameter_list -> . parameter_list expression
    (30) parameter_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    LPAREN          shift and go to state 16
    ID              shift and go to state 11
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15

    parameter_list                 shift and go to state 41
    expression                     shift and go to state 34
=======
    RPAREN          shift and go to state 43
    LPAREN          shift and go to state 13
    ID              shift and go to state 16
    NUMBER          shift and go to state 17
    STRING          shift and go to state 12

    expression                     shift and go to state 30
    parameter_list                 shift and go to state 42
>>>>>>> Pype Lab 2 work

state 27

    (12) expression -> LPAREN OUTPUT . declaration_list RPAREN
    (13) expression -> LPAREN OUTPUT . RPAREN
    (14) declaration_list -> . declaration_list declaration
    (15) declaration_list -> . declaration
    (16) declaration -> . LPAREN type ID RPAREN
    (17) declaration -> . ID

    RPAREN          shift and go to state 43
    LPAREN          shift and go to state 33
    ID              shift and go to state 31

    declaration                    shift and go to state 29
    declaration_list               shift and go to state 42

state 28

    (8) expression_list -> expression_list expression .

    RBRACE          reduce using rule 8 (expression_list -> expression_list expression .)
    LPAREN          reduce using rule 8 (expression_list -> expression_list expression .)
    ID              reduce using rule 8 (expression_list -> expression_list expression .)
    NUMBER          reduce using rule 8 (expression_list -> expression_list expression .)
    STRING          reduce using rule 8 (expression_list -> expression_list expression .)


state 29

<<<<<<< af9c2cd335d781918526305e9316f58f975b20d9
    (15) declaration_list -> declaration .

    RPAREN          reduce using rule 15 (declaration_list -> declaration .)
    LPAREN          reduce using rule 15 (declaration_list -> declaration .)
    ID              reduce using rule 15 (declaration_list -> declaration .)


state 30

    (10) expression -> LPAREN INPUT declaration_list . RPAREN
    (14) declaration_list -> declaration_list . declaration
    (16) declaration -> . LPAREN type ID RPAREN
    (17) declaration -> . ID

    RPAREN          shift and go to state 45
    LPAREN          shift and go to state 33
    ID              shift and go to state 31

    declaration                    shift and go to state 44

state 31

    (17) declaration -> ID .

    RPAREN          reduce using rule 17 (declaration -> ID .)
    LPAREN          reduce using rule 17 (declaration -> ID .)
    ID              reduce using rule 17 (declaration -> ID .)


state 32

    (11) expression -> LPAREN INPUT RPAREN .

    RPAREN          reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)
    LPAREN          reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)
    ID              reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)
    NUMBER          reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)
    STRING          reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)
    RBRACE          reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)


state 33

    (16) declaration -> LPAREN . type ID RPAREN
    (18) type -> . ID

    ID              shift and go to state 47

    type                           shift and go to state 46

state 34

=======
    (25) expression -> LPAREN OP_DIV parameter_list . RPAREN
    (29) parameter_list -> parameter_list . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING
